# mkdocs-awesome-nav

./: .coveragerc  .gitignore  mkdocs.yml  pyproject.toml  tox.ini
.github/workflows/: checks.yml  docs.yml  publish.yml
docs/: .nav.yml  extra.css  index.md  migration-v3.md  philosophy.md  reference.md
docs/features/: .nav.yml  flattening.md  hiding.md  nav.md  sorting.md  titles.md
mkdocs_awesome_nav/: plugin.py
mkdocs_awesome_nav/nav/: config.py
tests/: conftest.py  test_config.py  test_flatten_single_child_sections.py  test_hide.py  test_ignore.py  test_nav.py  test_nav_directory.py  test_nav_file.py  test_nav_link.py  test_nav_pattern.py  test_nav_pattern_options.py  test_nav_section.py  test_plugin.py  test_sort_by.py  test_sort_direction.py  test_sort_ignore_case.py  test_sort_sections.py  test_sort_type.py  test_title.py
tests/compatibility/: test_exclude.py  test_material.py  test_mkdocs.py  test_mktheapidocs.py  test_monorepo.py  test_multirepo.py  test_static_i18n_folder.py  test_static_i18n_suffix.py
tests/compatibility/mktheapidocs_test_module/: setup.py
tests/compatibility/mktheapidocs_test_module/mktheapidocs_test_module/: foo.py
tests/examples/: test_flattening.py  test_hiding.py  test_nav.py  test_sorting.py  test_titles.py
