[project]
name = "mkdocs-awesome-nav"
version = "3.0.0"
description = "Plugin to customize your MkDocs navigation structure"
keywords = ["mkdocs", "markdown", "documentation", "navigation"]
authors = [{name = "Lukas Geiter", email = "info@lukasgeiter.com"}]
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology"
]
requires-python = ">=3.10"
dependencies = [
    "mkdocs>=1.6.0",
]

[project.urls]
source = "https://github.com/lukasgeiter/mkdocs-awesome-nav/"

[project.entry-points."mkdocs.plugins"]
awesome-nav = "mkdocs_awesome_nav.plugin:AwesomeNavPlugin"

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[dependency-groups]
dev = [
    "mypy>=1.14.0",
    "ruff>=0.8.4",
]

[tool.ruff]
line-length = 120